--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ ul{
     list-style: none;
     font-size: 18px;
 }
-a{
+li a{
     text-decoration: none;
     color: rgb(115, 117, 120);
 }
-a:hover{
+li a:hover{
     color: white;
     cursor: pointer;
     list-style: none;
